--- a/Works/modulo_2/Desafio/sobrePage/style.css
+++ b/Works/modulo_2/Desafio/sobrePage/style.css
@@ -6,6 +6,21 @@
     border: 0;
 }
 
+header {
+    padding: 30px;
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+header div {
+    text-align: center;
+}
+
+header div a {
+    color: black;
+    font-family: 'Roboto', sans-serif;
+    margin: 0 30px;
+}
+
 body {
     background-color: rgb(238, 237, 254);
     font-family: 'Roboto', sans-serif;
