--- a/Works/modulo_2/Desafio/style.css
+++ b/Works/modulo_2/Desafio/style.css
@@ -20,7 +20,7 @@ header div {
 }
 
 header div a {
-    color: white;
+    color: black;
     font-family: 'Roboto', sans-serif;
     margin: 0 30px;
 }
