--- a/Works/Foodfy/public/style.css
+++ b/Works/Foodfy/public/style.css
@@ -38,7 +38,27 @@ header img {
     border-bottom: 2px solid black;
 }
 
+.menu-selected {
+    font-weight: bold;
+}
 
+footer {
+    text-align: center;
+    background-color: #EEEEEE;
+    margin-top: 50px;
+    width: 100%;
+    position: absolute;
+    left: 0;
+}
+
+footer p {
+    margin: 31px 0;
+    font-size: 14px;
+    color: #999999;
+    line-height: 0;
+}
+
+/* === HOME PAGE === */
 .board {
     display: flex;
     align-items: center;
@@ -86,6 +106,11 @@ header img {
     cursor: pointer;
 }
 
+.cards img:hover {
+    opacity: 0.7;
+    transition: opacity 0.2s;
+}
+
 .card-name {
     font-size: 18px;
     margin: 20px 0 5px 0;
@@ -96,18 +121,22 @@ header img {
     color: #777777;
 }
 
-footer {
-    text-align: center;
-    background-color: #EEEEEE;
-    margin-top: 50px;
-    width: 100%;
-    position: absolute;
-    left: 0;
+/* === ABOUT PAGE === */
+
+.about-content h1 {
+    font-weight: bold;
+    font-size: 24px;
 }
 
-footer p {
-    margin: 31px 0;
-    font-size: 14px;
-    color: #999999;
-    line-height: 0;
+.about-content p {
+    font-size: 18px;
+    color: #444444;
+    line-height: 28px;
+    margin-top: 20px;
+}
+
+.about-content h2 {
+    font-weight: bold;
+    font-size: 20px;
+    margin-top: 30px;
 }
