--- a/Works/modulo_3/public/style.css
+++ b/Works/modulo_3/public/style.css
@@ -46,7 +46,7 @@ header {
 }
 
 #wrapper img {
-    /* border-radius: 50%; */
+    border-radius: 50%;
     border: 5px solid var(--color-green);
     margin-bottom: 32px;
     height: 300px;
@@ -66,7 +66,7 @@ header {
 }
 
 #wrapper p {
-    max-width: 500px;
+    max-width: 600px;
     margin: 32px auto;
     font-size: 24px;
     line-height: 34px;
@@ -96,6 +96,8 @@ div p a {
 
 .card {
     background-color: var(--color-rocket);
+    cursor: pointer;
+    display: grid;
 }
 
 .card-image-container img {
@@ -110,6 +112,7 @@ div p a {
 .card-info {
     display: grid;
     grid-template-columns: 2fr 1fr;
+    align-items: center;
 }
 
 .card-info p {
@@ -163,4 +166,37 @@ iframe {
     height: 90%;
     position: absolute;
     top: 5%;
+}
+
+/* === FEATURED === */
+.featured-wrapper.card-image-container {
+    position: relative;
+}
+
+.featured {
+    background: #f7d05f;
+    color: #111;
+    padding: 2px 8px;
+    position: absolute;
+    top: -10px;
+    right: 5px;
+    border-radius: 16px;
+}
+
+/* === VIDEO-PAGE === */
+.video {
+    margin: 0 auto;
+    max-width: 800px;
+}
+
+.card-video-container {
+    position: relative;
+    padding-top: 62.5%;
+}
+
+.card-video-container iframe {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0%;
 }
