--- a/Works/Foodfy/public/style.css
+++ b/Works/Foodfy/public/style.css
@@ -102,6 +102,8 @@ footer p {
 
 .cards img {
     width: 100%;
+    height: 140px;
+    object-fit: cover;
     border-radius: 15px;
     cursor: pointer;
 }
@@ -139,4 +141,54 @@ footer p {
     font-weight: bold;
     font-size: 20px;
     margin-top: 30px;
+}
+
+/* === DETAILS PAGE === */
+.details-card {
+    text-align: center;
+}
+
+.details-card img {
+    width: 100%;
+    height: 280px;
+    border-radius: 15px;
+    object-fit: cover;
+}
+
+.details-card h1 {
+    font-size: 36px;
+    margin-top: 50px;
+}
+
+.details-card p {
+    color: #777777;
+    font-size: 20px;
+    margin: 4px 0 10px 0;
+}
+
+.details-info-test{
+    border: 1px solid black;
+}
+
+.details-info {
+    display: flex;
+    align-items: flex-end;
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+
+.details-info p {
+    font-size: 12px;
+    color: #999999;
+    margin-left: 8px;
+    cursor: pointer;
+}
+
+.details-hidden {
+    display: none;
+}
+
+/* === NOT-FOUND PAGE === */
+.not-found-content {
+    text-align: center;
 }
