--- a/Works/Foodfy/views/home.njk
+++ b/Works/Foodfy/views/home.njk
@@ -19,40 +19,12 @@
     <p id="mostAccessed">Mais acessadas</p>
 
     <div class="cards">
-        <div class="card">
-            <img src="/assets/burger.png" alt="">
-            <p class="card-name">Triplo bacon burguer</p>
-            <p class="card-author">por Jorge Relato</p>
-        </div>
-
-        <div class="card">
-            <img src="/assets/pizza.png" alt="">
-            <p class="card-name">Pizza 4 estações</p>
-            <p class="card-author">por Fabiana Melo</p>
-        </div>
-
-        <div class="card">
-            <img src="/assets/espaguete.png" alt="">
-            <p class="card-name">Espaguete ao alho</p>
-            <p class="card-author">por Júlia Kinoto</p>
-        </div>
-
-        <div class="card">
-            <img src="/assets/lasanha.png" alt="">
-            <p class="card-name">Lasanha mac n' cheese</p>
-            <p class="card-author">por Juliano Vieira</p>
-        </div>
-
-        <div class="card">
-            <img src="/assets/doce.png" alt="">
-            <p class="card-name">Docinhos pão-do-céu</p>
-            <p class="card-author">por Ricardo Golvea</p>
-        </div>
-
-        <div class="card">
-            <img src="/assets/asinhas.png" alt="">
-            <p class="card-name">Asinhas de frango ao barbecue</p>
-            <p class="card-author">por Vania Steroski</p>
-        </div>
+        {% for i in range(0, 6) %}
+            <div class="card">
+                <img src="{{ recipes[i].image }}" alt="Imagem de {{ recipes[i].title }}">
+                <p class="card-name">{{ recipes[i].title }}</p>
+                <p class="card-author">{{ recipes[i].author }}</p>
+            </div>
+        {% endfor %}
     </div>
 {% endblock %}
