--- a/Works/Foodfy/views/layout.njk
+++ b/Works/Foodfy/views/layout.njk
@@ -4,7 +4,7 @@
         {% block head %}
             <title>Foodfy</title>
         {% endblock %}
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/style.css">
     </head>
 
     <body>
