--- a/Works/Foodfy/views/recipes.njk
+++ b/Works/Foodfy/views/recipes.njk
@@ -6,76 +6,12 @@
 
 {% block content %}
     <div class="cards">
-        <div class="card">
-            <img class="burger" src="../../assets/burger.png" alt="burguer">
-            <p class="card-name">Triplo bacon burguer</p>
-            <p class="card-author">por Jorge Relato</p>
-        </div>
-
-        <div class="card">
-            <img class="pizza" src="../../assets/pizza.png" alt="pizza">
-            <p class="card-name">Pizza 4 estações</p>
-            <p class="card-author">por Fabiana Melo</p>
-        </div>
-
-        <div class="card">
-            <img class="espaguete" src="../../assets/espaguete.png" alt="espaguete">
-            <p class="card-name">Espaguete ao alho</p>
-            <p class="card-author">por Júlia Kinoto</p>
-        </div>
-
-        <div class="card">
-            <img class="lasanha" src="../../assets/lasanha.png" alt="lasanha">
-            <p class="card-name">Lasanha mac n' cheese</p>
-            <p class="card-author">por Juliano Vieira</p>
-        </div>
-
-        <div class="card">
-            <img class="doce" src="../../assets/doce.png" alt="doce">
-            <p class="card-name">Docinhos pão-do-céu</p>
-            <p class="card-author">por Ricardo Golvea</p>
-        </div>
-
-        <div class="card">
-            <img class="asinhas" src="../../assets/asinhas.png" alt="asinhas">
-            <p class="card-name">Asinhas de frango ao barbecue</p>
-            <p class="card-author">por Vania Steroski</p>
-        </div>
-
-        <div class="card">
-            <img class="burger" src="../../assets/burger.png" alt="burguer">
-            <p class="card-name">Triplo bacon burguer</p>
-            <p class="card-author">por Jorge Relato</p>
-        </div>
-
-        <div class="card">
-            <img class="pizza" src="../../assets/pizza.png" alt="pizza">
-            <p class="card-name">Pizza 4 estações</p>
-            <p class="card-author">por Fabiana Melo</p>
-        </div>
-
-        <div class="card">
-            <img class="espaguete" src="../../assets/espaguete.png" alt="espaguete">
-            <p class="card-name">Espaguete ao alho</p>
-            <p class="card-author">por Júlia Kinoto</p>
-        </div>
-
-        <div class="card">
-            <img class="lasanha" src="../../assets/lasanha.png" alt="lasanha">
-            <p class="card-name">Lasanha mac n' cheese</p>
-            <p class="card-author">por Juliano Vieira</p>
-        </div>
-
-        <div class="card">
-            <img class="doce" src="../../assets/doce.png" alt="doce">
-            <p class="card-name">Docinhos pão-do-céu</p>
-            <p class="card-author">por Ricardo Golvea</p>
-        </div>
-
-        <div class="card">
-            <img class="asinhas" src="../../assets/asinhas.png" alt="asinhas">
-            <p class="card-name">Asinhas de frango ao barbecue</p>
-            <p class="card-author">por Vania Steroski</p>
-        </div>
+        {% for recipe in info.recipes %}
+            <div class="card">
+                <img src="{{ recipe.image }}" alt="Imagem de {{ recipe.title }}">
+                <p class="card-name">{{ recipe.title }}</p>
+                <p class="card-author">{{ recipe.author }}</p>
+            </div>
+        {% endfor %}
     </div>
 {% endblock %}
