--- a/Works/Foodfy/views/details.njk
+++ b/Works/Foodfy/views/details.njk
@@ -15,7 +15,7 @@
         <h2>Ingredientes</h2>
         <p class="ingredients">ESCONDER</p>
     </div>
-    <ul class="details-ingredients">
+    <ul class="details details-ingredients">
         {% for ingredient in info.data.ingredients %}
             <li>{{ ingredient }}</li>
         {% endfor %}
@@ -25,7 +25,7 @@
         <h2>Modo de preparo</h2>
         <p class="preparation">ESCONDER</p>
     </div>
-    <ul class="details-preparation">
+    <ul class="details details-preparation">
         {% for prep in info.data.preparation %}
             <li>{{ prep }}</li>
         {% endfor %}
@@ -35,5 +35,5 @@
         <h2>Informações adicionais</h2>
         <p class="additional">ESCONDER</p>
     </div>
-    <p class="details-additional"> {{ info.data.information }}</p>
+    <p class="details details-additional"> {{ info.data.information }}</p>
 {% endblock %}
