--- a/Works/desafio_4/views/teachers/create.njk
+++ b/Works/desafio_4/views/teachers/create.njk
@@ -12,55 +12,7 @@
         <div class="card-details">
             <h3>Dados do Professor</h3>
 
-            <div class="item">
-                <div>Foto URL</div>
-                <div>
-                    <input type="url" name="photo_url" placeholder="http://">
-                </div>
-            </div>
-
-            <div class="item">
-                <div>Nome completo</div>
-                <div>
-                    <input type="text" name="name" placeholder="Digite seu nome completo">
-                </div>
-            </div>
-
-            <div class="item">
-                <div>Data de nascimento</div>
-                <div>
-                    <input type="date" name="birth">
-                </div>
-            </div>
-
-            <div class="item">
-                <div>Grau de escolaridade</div>
-                <div>
-                    <select name="educational_level">
-                        <option value="high_school" selected>Ensino Médio Completo</option>
-                        <option value="undergraduate">Ensino Superior Completo</option>
-                        <option value="master">Mestrado</option>
-                        <option value="doctor">Doutorado</option>
-                    </select>
-                </div>
-            </div>
-
-            <div class="item">
-                <div>Tipo de aula</div>
-                <div>
-                    <span><input type="radio" name="class_type" value="P">Presencial</span>
-                    <span><input type="radio" name="class_type" value="D">À distância</span>
-                </div>
-            </div>
-
-            <div class="item">
-                <div>Áreas de especialidade</div>
-                <div>
-                    <input type="text" name="areas" placeholder="Digite as áreas separadas por vírgula">
-                </div>
-            </div>
-
-            <button type="submit">Salvar</button>
+            {% include 'teachers/fields.njk' %}
         </div>
     </form>
 {% endblock %}
