--- a/Works/desafio_4/views/teachers/show.njk
+++ b/Works/desafio_4/views/teachers/show.njk
@@ -8,43 +8,46 @@
     <div class="card">
         <div 
             class="card-image"
-            style="background: url(https://source.unsplash.com/collection/6773393/500x500) no-repeat center center / cover">
+            style="background: url({{ teacher.photo_url }}) no-repeat center center / cover">
         </div>
         <div class="card-details">
             <h3>Detalhes</h3>
 
             <div class="item">
                 <div>Nome completo</div>
-                <div>INICIAL</div>
+                <div>{{ teacher.name }}</div>
             </div>
 
             <div class="item">
                 <div>Idade</div>
-                <div>31</div>
+                <div>{{ teacher.age }}</div>
             </div>
 
             <div class="item">
                 <div>Grau de escolaridade</div>
-                <div>Mestrado</div>
+                <div>{{ teacher.educational_level }}</div>
             </div>
 
             <div class="item">
                 <div>Tipo de aula</div>
-                <div>Presencial</div>
+                <div>{{ teacher.class_type }}</div>
             </div>
 
             <div class="item">
                 <div>Acompanhamento</div>
                 <div>
-                    <span>Matemática</span>
-                    <span>Física</span>
+                    {% for area in teacher.areas %}
+                        <span> {{ area }}</span>
+                    {% endfor %}
                 </div>
             </div>
 
             <div class="item">
                 <div>Desde</div>
-                <div>10/04/2020</div>
+                <div>{{ teacher.created_at }}</div>
             </div>
+
+            <a class="button" href="/teachers/{{ teacher.id }}/edit">Editar</a>
         </div>
     </div>
 {% endblock %}
