--- a/Works/modulo_4/public/style.css
+++ b/Works/modulo_4/public/style.css
@@ -156,7 +156,8 @@ input::placeholder {
     font-weight: normal;
 }
 
-button[type="submit"] {
+button[type="submit"],
+a.button {
     padding: 8px 32px;
     background-color: var(--primary-color);
     color: white;
@@ -164,4 +165,20 @@ button[type="submit"] {
     margin-top: 32px;
     width: 100%;
     font-size: 16px;
+    outline: none;
+    cursor: pointer;
 }
+
+a.button {
+    display: block;
+    box-sizing: border-box;
+    text-align: center;
+    text-decoration: none;
+}
+
+/* === FORM DELETE === */
+#form-delete button[type="submit"] {
+    background-color: rgb(235, 80, 80); 
+    margin-top: 16px
+}
+
