Finalização do desafio 4-6

--- a/Works/desafio_4/public/style.css
+++ b/Works/desafio_4/public/style.css
@@ -75,6 +75,8 @@ header {
     box-shadow: 0px 0px 6px 10px rgba(255, 255, 255, 0.2);
 
     animation: up 700ms ease-out;
+
+    position: relative;
 }
 
 @keyframes up {
@@ -91,6 +93,10 @@ header {
 
 .card-details {
     padding: 32px;
+}
+
+.card-forms form {
+    width: 100%;
 }
 
 .card-details .item {
@@ -182,4 +188,74 @@ select {
 #form-delete button[type="submit"] {
     background-color: rgb(240, 82, 82);
     margin-top: 8px;
+}
+
+/* === INDEX === */
+
+.table-container {
+    display: block;
+    padding: 40px;
+    box-sizing: border-box;
+}
+
+.table-container table {
+    border-spacing: 0;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.table-container tr {
+    border-bottom: 1px solid #d9d9d9;
+}
+
+.table-container tbody tr:last-child {
+    border: none;
+}
+
+.table-container thead th {
+    text-transform: uppercase;
+}
+
+.table-container tbody td,
+.table-container thead th {
+    padding: 16px;
+    text-align: left;
+}
+
+.table-container tbody td:last-child,
+.table-container thead th {
+    text-align: center;
+}
+
+.table-container tbody td:nth-child(2) span {
+    text-transform: uppercase;
+    color: #777;
+    font-size: 12px;
+    background-color: #f7df1e;
+    padding: 8px 16px;
+    border-radius: 8px;
+    margin-left: 4px;
+    margin-top: 8px;
+    display: inline-block;
+}
+
+.table-container tbody td a {
+    background-color: #282a36;
+    color: white;
+    text-decoration: none;
+    padding: 8px 16px;
+    border-radius: 8px;
+    box-shadow: 4px 4px 6px -2px black;
+}
+
+.table-container tbody td:first-child div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.table-container tbody td:first-child img {
+    width: 40px;
+    border-radius: 50%;
+    margin-right: 12px;
 }
