--- a/Works/desafio_4/views/teachers/index.njk
+++ b/Works/desafio_4/views/teachers/index.njk
@@ -5,46 +5,36 @@
 {% endblock %}
 
 {% block content %}
-    <div class="card">
-        <div 
-            class="card-image"
-            style="background: url(https://source.unsplash.com/collection/6773393/500x500) no-repeat center center / cover">
-        </div>
-        <div class="card-details">
-            <h3>Detalhes</h3>
+    <div class="card table-container">
+        <table>
+            <thead>
+                <tr>
+                    <th>Nome</th>
+                    <th>Acompanhamento</th>
+                    <th>Ação</th>
+                </tr>
+            </thead>
 
-            <div class="item">
-                <div>Nome completo</div>
-                <div>INICIAL</div>
-            </div>
-
-            <div class="item">
-                <div>Idade</div>
-                <div>31</div>
-            </div>
-
-            <div class="item">
-                <div>Grau de escolaridade</div>
-                <div>Mestrado</div>
-            </div>
-
-            <div class="item">
-                <div>Tipo de aula</div>
-                <div>Presencial</div>
-            </div>
-
-            <div class="item">
-                <div>Acompanhamento</div>
-                <div>
-                    <span>Matemática</span>
-                    <span>Física</span>
-                </div>
-            </div>
-
-            <div class="item">
-                <div>Desde</div>
-                <div>10/04/2020</div>
-            </div>
-        </div>
+            <tbody>
+                {% for teacher in teachers %}
+                    <tr>
+                        <td>
+                            <div>
+                                <img src="{{teacher.photo_url}}" alt="photo">
+                                {{ teacher.name }}
+                            </div>
+                        </td>
+                        <td>
+                            {% for area in teacher.areas %}
+                                <span>{{ area }}</span>
+                            {% endfor %}
+                        </td>
+                        <td>
+                            <a href="/teachers/{{ teacher.id }}">Ver</a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 {% endblock %}
