--- a/Works/Foodfy/views/userNavigation/recipes.njk
+++ b/Works/Foodfy/views/userNavigation/recipes.njk
@@ -6,9 +6,11 @@
 
 {% block content %}
     <div class="cards">
-        {% for recipe in info.recipes %}
+        {% for recipe in recipes %}
             <div class="card">
-                <img src="{{ recipe.image }}" alt="Imagem de {{ recipe.title }}">
+                <a href="/recipeslist/{{ recipe.id }}">
+                    <img src="{{ recipe.image }}" alt="Imagem de {{ recipe.title }}">
+                </a>
                 <p class="card-name">{{ recipe.title }}</p>
                 <p class="card-author">{{ recipe.author }}</p>
             </div>
