--- a/Works/modulo_4/public/style.css
+++ b/Works/modulo_4/public/style.css
@@ -138,7 +138,7 @@ header {
 }
 
 /* === FORM === */
-input {
+input, select {
     width: 100%;
     outline: none;
     color: #555;
@@ -214,16 +214,18 @@ th {
     text-transform: uppercase;
     color: #777;
     font-size: 14px;
+    border-top: 1px solid #d9d9d9;
 }
 
 tbody tr:last-child {
     border: none;
 }
 
-tbody tr td:first-child {
+tbody tr td:first-child div {
     display: grid;
     grid-template-columns: 64px 1fr;
     align-items: center;
+    width: 100%;
 }
 
 tbody tr td:first-child span {
@@ -248,7 +250,8 @@ tbody tr td:nth-child(2) span {
     font-size: 12px;
 }
 
-tbody tr td:last-child a {
+tbody tr td:last-child a,
+.table-container > a {
     background-color: var(--primary-color);
     padding: 8px 16px;
     text-decoration: none;
@@ -256,6 +259,11 @@ tbody tr td:last-child a {
     color: white;
     font-size: 12px;
     border-radius: 8px;
+}
+
+.table-container > a {
+    margin-bottom: 16px;
+    display: inline-block;
 }
 
 .table-container thead tr th:last-child,
