--- a/Works/modulo_4/views/instructors/index.njk
+++ b/Works/modulo_4/views/instructors/index.njk
@@ -5,6 +5,8 @@
 
 {% block content %}
     <div class="card table-container">
+        <a href="/instructors/create">Novo</a>
+        
         <table width="100%">
             <thead>
                 <tr>
@@ -17,8 +19,10 @@
                 {% for instructor in instructors %}
                     <tr>
                         <td>
-                            <span style="background-image: url({{ instructor.avatar_url }})"></span>
-                            {{ instructor.name }}
+                            <div>
+                                <span style="background-image: url({{ instructor.avatar_url }})"></span>
+                                {{ instructor.name }}
+                            </div>
                         </td>
                         <td>
                             {% for service in instructor.services %}
