--- a/Works/modulo_4/views/members/edit.njk
+++ b/Works/modulo_4/views/members/edit.njk
@@ -7,20 +7,20 @@
     <div class="card">
         <section 
             class="avatar"
-            style="background: url({{ instructor.avatar_url }}) no-repeat center center / cover">
+            style="background: url({{ member.avatar_url }}) no-repeat center center / cover">
         </section>
 
         <section class="details">
-            <form method="POST" action="/instructors?_method=PUT">
-                <h3>Editar instrutor</h3>
+            <form method="POST" action="/members?_method=PUT">
+                <h3>Editar membro</h3>
 
-                {% include 'instructors/fields.njk' %}
+                {% include 'members/fields.njk' %}
 
-                <input type="hidden" name="id" value="{{ instructor.id }}">
+                <input type="hidden" name="id" value="{{ member.id }}">
             </form>
 
-            <form id="form-delete" method="POST" action="/instructors?_method=DELETE">
-                <input type="hidden" name="id" value="{{ instructor.id }}">
+            <form id="form-delete" method="POST" action="/members?_method=DELETE">
+                <input type="hidden" name="id" value="{{ member.id }}">
                 <button type="submit">Deletar</button>
             </form>
         </section>
@@ -35,5 +35,4 @@
             }
         })
     </script>
-    
 {% endblock %}
