--- a/Works/desafio_5/views/students/index.njk
+++ b/Works/desafio_5/views/students/index.njk
@@ -6,33 +6,35 @@
 
 {% block content %}
     <div class="card table-container">
-        <a id="index-create-btn" href="/teachers/create">Criar professor</a>
-
+        <a id="index-create-btn" href="/students/create">Criar estudante</a>
+        
         <table>
             <thead>
                 <tr>
                     <th>Nome</th>
-                    <th>Acompanhamento</th>
+                    <th>E-mail</th>
+                    <th>Ano escolar</th>
                     <th>Ação</th>
                 </tr>
             </thead>
 
             <tbody>
-                {% for teacher in teachers %}
+                {% for student in students %}
                     <tr>
                         <td>
                             <div>
-                                <img src="{{teacher.photo_url}}" alt="photo">
-                                {{ teacher.name }}
+                                <img src="{{student.photo_url}}" alt="photo">
+                                {{ student.name }}
                             </div>
                         </td>
                         <td>
-                            {% for area in teacher.areas %}
-                                <span>{{ area }}</span>
-                            {% endfor %}
+                            {{ student.email }}
                         </td>
                         <td>
-                            <a href="/teachers/{{ teacher.id }}">Ver</a>
+                            {{ student.school_year }}
+                        </td>
+                        <td>
+                            <a href="/students/{{ student.id }}">Ver</a>
                         </td>
                     </tr>
                 {% endfor %}
