--- a/Works/modulo_5/src/app/views/layout.njk
+++ b/Works/modulo_5/src/app/views/layout.njk
@@ -2,7 +2,7 @@
 <html>
     <head>
         {% block head %}
-            <title>Aulas particulares</title>
+            <title>Gym Manager</title>
         {% endblock %}
         <link rel="stylesheet" href="/style.css">    
     </head>
@@ -10,8 +10,8 @@
     <body>
         <header>
             <div class="links">
-                <a href="/teachers">Teachers</a>
-                <a href="/students">Students</a>
+                <a href="/instructors">Instructors</a>
+                <a href="/members">Members</a>
             </div>
         </header>
 
