--- a/Works/modulo_5/src/app/views/instructors/index.njk
+++ b/Works/modulo_5/src/app/views/instructors/index.njk
@@ -5,13 +5,21 @@
 
 {% block content %}
     <div class="card table-container">
-        <a href="/instructors/create">Novo</a>
+        
+        <div class="header">
+            <a class="button" href="/instructors/create">Novo</a>
+            <form action="/instructors" method="GET">
+                <input type="text" name="filter" placeholder="Nome ou atendimento" value={{ filter }}>
+                <button type="submit">Filtrar</button>
+            </form>
+        </div>
         
         <table width="100%">
             <thead>
                 <tr>
                     <th>Instructor</th>
                     <th>Atendimento</th>
+                    <th>Alunos</th>
                     <th>Ação</th>
                 </tr>
             </thead>
@@ -28,6 +36,9 @@
                             {% for service in instructor.services %}
                                 <span>{{ service }}</span>
                             {% endfor %}
+                        </td>
+                        <td>
+                            {{ instructor.total_students }}
                         </td>
                         <td>
                             <a href="/instructors/{{ instructor.id }}">ver</a>
