--- a/Works/desafio_5/src/app/views/students/fields.njk
+++ b/Works/desafio_5/src/app/views/students/fields.njk
@@ -69,4 +69,21 @@
     </div>
 </div>
 
+<div class="item">
+    <div>Professor</div>
+    <div>
+        <select name="teacher_id">
+            {% for teacher in teachersOptions %}
+                <option value="{{ teacher.id }}" 
+                    {% if student.teacher_id == teacher.id %}
+                        selected
+                    {% endif %}
+                >
+                    {{ teacher.name }}
+                </option>
+            {% endfor %}
+        </select>
+    </div>
+</div>
+
 <button type="submit">Salvar</button>
