--- a/Works/desafio_5/src/app/views/students/show.njk
+++ b/Works/desafio_5/src/app/views/students/show.njk
@@ -43,6 +43,11 @@
                 <div>{{ student.created_at }}</div>
             </div>
 
+            <div class="item">
+                <div>Professor</div>
+                <div>{{ student.teacher_name }}</div>
+            </div>
+
             <a class="button" href="/students/{{ student.id }}/edit">Editar</a>
         </div>
     </div>
