--- a/Works/modulo_5/src/app/views/instructors/index.njk
+++ b/Works/modulo_5/src/app/views/instructors/index.njk
@@ -47,5 +47,11 @@
                 {% endfor %}
             </tbody>
         </table>
+
+        <div class="pagination"
+            data-page={{pagination.page}}
+            data-total={{pagination.total}}
+            data-filter={{filter}}>
+        </div>
     </div>
 {% endblock %}
