--- a/Works/modulo_5/src/app/views/members/index.njk
+++ b/Works/modulo_5/src/app/views/members/index.njk
@@ -5,7 +5,13 @@
 
 {% block content %}
     <div class="card table-container">
-        <a href="/members/create">Novo</a>
+        <div class="header">
+            <a class="button" href="/members/create">Novo</a>
+            <form action="/members" method="GET">
+                <input type="text" name="filter" placeholder="Nome ou e-mail" value={{ filter }}>
+                <button type="submit">Filtrar</button>
+            </form>
+        </div>
 
         <table width="100%">
             <thead>
@@ -42,5 +48,11 @@
                 {% endfor %}
             </tbody>
         </table>
+
+        <div class="pagination"
+            data-page={{pagination.page}}
+            data-total={{pagination.total}}
+            data-filter={{filter}}>
+        </div>
     </div>
 {% endblock %}
