--- a/Works/Foodfy/src/app/views/recipes/edit.njk
+++ b/Works/Foodfy/src/app/views/recipes/edit.njk
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="admin-header">
-        <h1 id="admin-title">Criando receita</h1>
+        <h1 id="admin-title">Editando receita</h1>
 
         <div>
             <button class="button delete" type="submit" form="delete-recipe">Deletar</button>
