--- a/Works/Foodfy/src/app/views/layout.njk
+++ b/Works/Foodfy/src/app/views/layout.njk
@@ -11,15 +11,27 @@
         <div id="page-container">
             <div id="content-wrap">
                 <header>
-                    <div>
+                    <div class="header-content">
                         <a href="/">
                             <img src="/assets/logo_black.png" alt="logo_foodfy">
                         </a>  
                         
-                        <div class="menu">
+                        <div class="menu menu-user">
                             <a href="/about">Sobre</a>
                             <a href="/recipeslist">Receitas</a>
-                            <a href="/admin/recipes">Admin</a>
+                            <a href="/chefslist">Chefs</a>
+                        </div>
+
+                        <div class="menu menu-admin">
+                            <a href="/admin/recipes">Receitas</a>
+                            <a href="/admin/chefs">Chefs</a>
+                        </div>
+
+                        <div class="div-form menu-user">
+                            <form action="/recipeslist" method="GET">
+                                <input type="text" name="filter" placeholder="Buscar uma receita" value={{ filter }}>
+                                <button class="button" type="submit">Buscar</button>
+                            </form>
                         </div>
                     </div>
                 </header>
