--- a/Works/Foodfy/src/app/views/details-fields.njk
+++ b/Works/Foodfy/src/app/views/details-fields.njk
@@ -1,7 +1,7 @@
 <div class="details-card">
-    <img src="{{ recipe.image }}" alt="Imagem de {{ recipe.title }}">
+    <img src="{{ recipe.image_url }}" alt="Imagem de {{ recipe.title }}">
     <h1>{{ recipe.title }}</h1>
-    <p>{{ recipe.author }}</p>
+    <p>{{ recipe.name }}</p>
 </div>
 
 <div class="details-info">
