Finalização do Foodfy (módulo 5)

--- a/Works/Foodfy/src/app/views/chefs/details.njk
+++ b/Works/Foodfy/src/app/views/chefs/details.njk
@@ -21,7 +21,7 @@
             {% for recipe in recipes %}
                 <div class="admin-card">
                     <div>
-                        <img src="{{ recipe.image }}" alt="Imagem de {{ recipe.title }}">
+                        <img src="{{ recipe.image_url }}" alt="Imagem de {{ recipe.title }}">
                     </div>
                     <div>
                         <h2>{{ recipe.title }}</h2>
