--- a/Works/Foodfy/public/style.css
+++ b/Works/Foodfy/public/style.css
@@ -348,12 +348,16 @@ footer p {
 }
 
 .create-edit-fields input,
-.create-edit-fields textarea {
+.create-edit-fields textarea,
+.create-edit-fields select {
     border: 1px solid #DDD;
     width: 100%;
     border-radius: 4px;
     height: 50px;
     font-size: 16px;
+    padding-left: 20px;
+    background-color: white;
+    box-sizing: border-box;
 }
 
 .create-edit-fields section {
@@ -416,15 +420,29 @@ footer p {
     border-radius: 50%;
 }
 
-.admin-chef-card p {
+.admin-chef-card h1 {
     font-size: 18px;
     margin-bottom: 5px;
     width: 140px;
     color: #111111;
+    font-weight: normal;
+}
+
+.admin-chef-card p {
+    font-size: 14px;
+    margin-bottom: 5px;
+    color: #666666;
 }
 
 .admin-chef-card a {
     font-size: 14px;
     color: #6558C3;
     text-decoration: none;
+}
+
+/* === RECIPES FILTER === */
+.recipes-filter {
+    font-size: 24px;
+    color: #111111;
+    margin-bottom: 20px;
 }
