--- a/Works/Foodfy/src/app/views/userNavigation/chefs.njk
+++ b/Works/Foodfy/src/app/views/userNavigation/chefs.njk
@@ -1,13 +1,10 @@
-{% extends "../layout.njk" %}
+{% extends "layout.njk" %}
+
+{% block head %}
+    <title>Foodfy: receitas</title>
+{% endblock %}
 
 {% block content %}
-    <div class="admin-header">
-        <h1 id="admin-title">Gerenciar chefs</h1>
-        <div>
-            <a class="button" href="/admin/chefs/create">Criar chef</a>
-        </div>
-    </div>
-
     <div class="admin-chef-cards">
         {% for chef in chefs %}
             <div class="admin-chef-card">
@@ -16,9 +13,9 @@
                 </div>
                 <div>
                     <h1>{{ chef.name }}</h1>
-                    <a href="/admin/chefs/{{ chef.id }}">Visualizar</a>
+                    <p>{{chef.total_recipes}} receita(s)</p>
                 </div>
             </div>
         {% endfor %}
     </div>
-{% endblock content %}
+{% endblock %}
