--- a/Works/Foodfy/src/app/views/userNavigation/recipes.njk
+++ b/Works/Foodfy/src/app/views/userNavigation/recipes.njk
@@ -5,14 +5,18 @@
 {% endblock %}
 
 {% block content %}
+    {% if filter != ""%}
+        <h1 class="recipes-filter">Buscando por "{{ filter }}"</h1>
+    {% endif %}
+
     <div class="cards">
         {% for recipe in recipes %}
             <div class="card">
                 <a href="/recipeslist/{{ recipe.id }}">
-                    <img src="{{ recipe.image }}" alt="Imagem de {{ recipe.title }}">
+                    <img src="{{ recipe.image_url }}" alt="Imagem de {{ recipe.title }}">
                 </a>
                 <p class="card-name">{{ recipe.title }}</p>
-                <p class="card-author">{{ recipe.author }}</p>
+                <p class="card-author">{{ recipe.name }}</p>
             </div>
         {% endfor %}
     </div>
