--- a/Works/modulo_6/src/app/views/products/fields.njk
+++ b/Works/modulo_6/src/app/views/products/fields.njk
@@ -25,7 +25,17 @@
     </div>
 </div>
 
-{# Campo de Foto #}
+<div class="item">
+    <div>Fotos</div>
+    <div>
+        <div id="photos-upload">
+            <input type="file" multiple name="photos" id="photos-input" accept="image/*" onchange="PhotosUpload.handleFileInput(event)">
+            <p>Selecione até 6 fotos.</p>
+        </div>
+        <div id="photos-preview">
+        </div>
+    </div>
+</div>
 
 <div class="item">
     <div>Preço</div>
