--- a/Works/Foodfy/src/app/views/recipes/details.njk
+++ b/Works/Foodfy/src/app/views/recipes/details.njk
@@ -2,8 +2,8 @@
 
 {% block content %}
     <div class="admin-header">
-        <h1 id="admin-title">{{ recipe.title }}</h1>
-
+        <h1 id="admin-title">Receita: {{ recipe.title }}</h1>
+        
         <div>
             <a class="button" href="/admin/recipes/{{ recipe.id }}/edit">Editar receita</a>
         </div>
