--- a/Works/Foodfy/src/app/views/userNavigation/chefs.njk
+++ b/Works/Foodfy/src/app/views/userNavigation/chefs.njk
@@ -9,7 +9,7 @@
         {% for chef in chefs %}
             <div class="admin-chef-card">
                 <div>
-                    <img src="{{ chef.avatar_url }}" alt="Imagem de {{ chef.name }}">
+                    <img src="{{ chef.avatar_path }}" alt="Imagem de {{ chef.name }}">
                 </div>
                 <div>
                     <h1>{{ chef.name }}</h1>
