--- a/Works/Foodfy/src/app/views/layout.njk
+++ b/Works/Foodfy/src/app/views/layout.njk
@@ -5,6 +5,7 @@
             <title>Foodfy</title>
         {% endblock %}
         <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
 
     <body>
@@ -35,7 +36,7 @@
                         </div>
                     </div>
                 </header>
-
+                
                 <div class="body">
                     {% block content %}
                     {% endblock %}
