--- a/Works/Foodfy/src/app/views/recipes/create-edit-fields.njk
+++ b/Works/Foodfy/src/app/views/recipes/create-edit-fields.njk
@@ -1,12 +1,34 @@
 <div class="create-edit-fields">
     <section>
+        <p>Imagem da receita</p>
+        
+        <div class="upload-gallery">
+            <div class="images-preview invisible">
+                {% if files %}
+                    {% for image in files %}
+                        <div class="image" id="{{ image.id }}">
+                            <img src="{{ image.path }}" alt="{{ image.name }}">
+                            <i class="material-icons" onclick="ImageUpload.removeOldImage(event)">delete</i>
+                        </div>
+                    {% endfor %}
+                    <input type="hidden" name="removed_files">
+                {% endif %}
+            </div>
+
+            <div class="image-input">
+                <i class="material-icons">add</i>
+                <input type="file" multiple name="images" accept="image/*" onchange="ImageUpload.handleFileInput(event)" 
+                    {% if not files %}
+                        required
+                    {% endif %}
+                >
+            </div>
+        </div>
+    </section>
+    
+    <section>
         <p>Título da receita</p>
         <input type="text" name="title" required value="{{ recipe.title }}">
-    </section>
-
-    <section>
-        <p>Imagem da receita</p>
-        <input type="url" name="image_url" required value="{{ recipe.image_url }}">
     </section>
     
     <section>
