--- a/Works/Foodfy/src/app/views/recipes/index.njk
+++ b/Works/Foodfy/src/app/views/recipes/index.njk
@@ -12,7 +12,7 @@
         {% for recipe in recipes %}
             <div class="admin-card">
                 <div>
-                    <img src="{{ recipe.image_url }}" alt="Imagem de {{ recipe.title }}">
+                    <img src="{{ recipe.image_path }}" alt="Imagem de {{ recipe.title }}">
                 </div>
                 <div>
                     <h2>{{ recipe.title }}</h2>
